# drift-cli

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVTO_POST.md  LICENSE  Makefile  README.md  SECURITY.md  config.example.json  context.txt  drift.zsh  install.sh  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
docs/: index.md  security.md
docs/architecture/: llm.md  overview.md  safety.md
docs/blog/: copilot-experience.md  devto-post.md
docs/development/: changelog.md  contributing.md  setup.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: commands.md  memory.md  safe-execution.md  slash-commands.md
drift_cli/: __init__.py  cli.py  models.py
drift_cli/commands/: history_cmd.py  memory_cmd.py  suggest_cmd.py  system_cmd.py
drift_cli/core/: auto_setup.py  config.py  executor.py  executor_base.py  first_run.py  history.py  memory.py  ollama.py  safety.py  slash_commands.py
drift_cli/ui/: display.py  progress.py
tests/: conftest.py  test_auto_setup.py  test_cli_preprocessing.py  test_config.py  test_executor.py  test_executor_integration.py  test_history.py  test_memory.py  test_models.py  test_ollama.py  test_safety.py  test_slash_commands.py  test_system_update.py
