[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-cli"
version = "0.1.0"
description = "Terminal-native, safety-first AI assistant for the command line"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Drift CLI Team"}
]
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
drift = "drift_cli.cli:main_entry"

[tool.setuptools.packages.find]
include = ["drift_cli*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
